story updates incl Injustice System

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play The Chickenwire Incident.</tw-noscript></noscript></tw-story>
-<tw-storydata name="The Chickenwire Incident" startnode="1" creator="Twine" creator-version="2.3.13" ifid="B6A21DAE-0465-4B1C-887F-40A47926D4EC" zoom="1" format="Harlowe" format-version="3.2.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="A Phone Call at Work" tags="" position="412,189" size="100,100">It is 8 or 9pm on a Friday the 8th of May. You are at work, selling stripperwear at Goldfingers on Lonsdale Street in the Melbourne CBD. You are busy fitting dancers into sparkly bikinis and sequinned gowns, so when your phone rings do you [[answer it]] or [[let it ring out]]?</tw-passagedata><tw-passagedata pid="2" name="answer it" tags="" position="337,339" size="100,100">Of course you answer the phone. It&#39;s your best friend Jade. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="3" name="let it ring out" tags="" position="487,339" size="100,100">You don&#39;t want to miss out on the sale or risk having something stolen. You have your eye on the blonde with the dreadlocks who you caught showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for. You know it came from you because your friend in Los Angeles designs and produces that specific style under her label LoveMaterialGirl. 
+<tw-storydata name="The Chickenwire Incident" startnode="1" creator="Twine" creator-version="2.3.13" ifid="B6A21DAE-0465-4B1C-887F-40A47926D4EC" zoom="1" format="Harlowe" format-version="3.2.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="A Phone Call in the Dressing Room" tags="" position="412,136" size="100,100">It is 8 or 9pm on a Friday the 8th of May. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
 
-Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="4" name="slide right to answer" tags="" position="487,489" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
+In those days the money you earned was covered in sweat and cocaine. (Isn&#39;t all money, really?) Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime].
+
+Your life bled into theirs: their customers paid for your product; their customer&#39;s powders lined your nose, when to refuse would get you called a snitch. That is to say, you were an active participant. A consumer as much as a hawker of pretty things. As likely as to keep a corset for yourself as you were to sell it. Which meant you always had to sell more to buy more to wear more and sell more. Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] and your world was about to change. The nexus was a single phone call.
+
+Do you [[answer your phone]] or [[ignore it]]?</tw-passagedata><tw-passagedata pid="2" name="ignore it" tags="" position="476,254" size="100,100">You don&#39;t want to miss out on the sale or risk having something stolen. You have your eye on the blonde with the dreadlocks who you caught showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for. You know it came from you because your friend in Los Angeles designs and produces that specific style under her label LoveMaterialGirl. 
+
+Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="3" name="slide right to answer" tags="" position="418,366" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
 &quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly before comprehending basic rules of hygiene.
 &quot;Sorry,&quot; you say to Jade. &quot;What&#39;s up?&quot;
 &quot;Someone just rang me on the intercom telling me they&#39;re here to install chickenwire fencing,&quot; she says. &quot;I&#39;m scared and I don&#39;t know what to do.&quot;
@@ -19,9 +25,38 @@ Your phone rings again. It must be an emergency. You [[slide right to answer]].<
 &quot;They didn&#39;t say.&quot;
 &quot;Can you call the police?&quot;
 &quot;Can&#39;t. I&#39;m holding.&quot;
-Do you assure her that [[it&#39;s probably just X, your erstwhile boyfriend]] or do you [[panic because of what happened the other week]]?</tw-passagedata><tw-passagedata pid="5" name="it&#39;s probably just X, your erstwhile boyfriend" tags="" position="412,639" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="6" name="panic because of what happened the other week" tags="" position="562,639" size="100,100">On 26 April you and X and Jade went to Tramp for an event organised by your Brasilian DJ friend. This was the night that everything changed for you. There was some MDMA going around in the water bottles that night, some marijuana in the cigarettes. 
-Do you [[go to the bathroom]] or </tw-passagedata><tw-passagedata pid="7" name="go to the bathroom" tags="" position="562,789" size="100,100">change me
-</tw-passagedata></tw-storydata>
+Do you assure her that [[it&#39;s probably just X, your erstwhile boyfriend]] or do you [[panic because of what happened the other week]]?</tw-passagedata><tw-passagedata pid="4" name="it&#39;s probably just X, your erstwhile boyfriend" tags="" position="292,431" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="panic because of what happened the other week" tags="" position="557,422" size="100,100">On 26 April you and X and Jade went to Tramp for an event organised by your Brasilian DJ friend. This was the night that everything changed for you. There was some MDMA going around in the water bottles that night, some marijuana in the cigarettes. 
+Do you [[go to the bathroom]] or </tw-passagedata><tw-passagedata pid="6" name="go to the bathroom" tags="" position="669,545" size="100,100">change me
+hello</tw-passagedata><tw-passagedata pid="7" name="answer your phone" tags="" position="354,251" size="100,100">Of course you answer the phone. It&#39;s your best friend Jade. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="8" name="The Injustice System" tags="" position="747.5,244" size="100,100">You battle for your rights, reading the fine print. (click-append: &quot;fine print&quot;) [, demanding explanations] (click-append: &quot;demanding explanations&quot;) [, getting everything in writing] 
+
+
+(t8n-delay: 4s) + (t8n: &quot;fade-down&quot;) [If you go with the flow] (click-append: &quot;If you go with the flow&quot;) [ you risk being victimised by a system that was written by those with the privilege to write the rules] (click-replace: &quot;write the rules&quot;) [bend the rules and to sway the interpretation of those same rules against you.]
+
+
+Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to their advantage so that the justice system becomes another weapon in their arsenol. They become 
+
+* the applicant in Family Court
+* the so-called injured party
+* the victim (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="9" name="campaign of terror" tags="" position="747.5,394" size="100,100">He will drag you through the family court system for an entire year. Through... &lt;!--enter stats here re drug tests, court appearances, cancelled ccs etc and $$--!&gt;
+
+
+You will know all along that his goal is not shared custody. (click-replace: &quot;not shared custody&quot;) [maximising your distress and suffering] 
+
+
+But the judge will not believe you because you live such a quote-unquote (t8n: &quot;rumble&quot;) [colourful lifestyle]. He disregards your sworn statements of domestic violence and it seems that nothing you do or say will matter (click-append: &quot;nothing you do or say will matter&quot;) [ until the man with hands dancing in and out of pockets says to the man with privilege as white as his wig, &#39;&#39;Maybe I don&#39;t want to be a father&#39;&#39;.]
+
+
+Words etched in my neuropathways.
+
+
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
