--- a/index.html
+++ b/index.html
@@ -9,25 +9,60 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play The Chickenwire Incident.</tw-noscript></noscript></tw-story>
-<tw-storydata name="The Chickenwire Incident" startnode="1" creator="Twine" creator-version="2.3.13" ifid="B6A21DAE-0465-4B1C-887F-40A47926D4EC" zoom="1" format="Harlowe" format-version="3.2.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="A Phone Call in the Dressing Room" tags="" position="412,136" size="100,100">It is 8 or 9pm on a Friday the 8th of May. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
+<tw-storydata name="The Chickenwire Incident" startnode="1" creator="Twine" creator-version="2.3.13" ifid="B6A21DAE-0465-4B1C-887F-40A47926D4EC" zoom="1" format="Harlowe" format-version="3.2.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="A Phone Call in the Dressing Room" tags="" position="412,136" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
 
-In those days the money you earned was covered in sweat and cocaine. (Isn&#39;t all money, really?) Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime].
+In those days the money you earned was covered in sweat and cocaine. (Isn&#39;t all money, really?) Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
-Your life bled into theirs: their customers paid for your product; their customer&#39;s powders lined your nose, when to refuse would get you called a snitch. That is to say, you were an active participant. A consumer as much as a hawker of pretty things. As likely as to keep a corset for yourself as you were to sell it. Which meant you always had to sell more to buy more to wear more and sell more. Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] and your world was about to change. The nexus was a single phone call.
+Your life bled into theirs: their customers paid for your product; their customer&#39;s powders lined your nose, when to refuse would get you called a snitch. That is to say, you were an active participant. A consumer as much as a hawker of pretty things. As likely to keep a corset for yourself as you were to sell it. Which meant you had to sell more to buy more to wear more to sell more. 
 
-Do you [[answer your phone]] or [[ignore it]]?</tw-passagedata><tw-passagedata pid="2" name="ignore it" tags="" position="476,254" size="100,100">You don&#39;t want to miss out on the sale or risk having something stolen. You have your eye on the blonde with the dreadlocks who you caught showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for. You know it came from you because your friend in Los Angeles designs and produces that specific style under her label LoveMaterialGirl. 
+Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind&quot;) [expensive and sometimes debt-inducing] and your world was about to change. Your life had already spun upside-down, but now that other people were being sucked into the vortex, you could no longer deny that a certain incubus had glommed on to your light.
 
-Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="3" name="slide right to answer" tags="" position="418,366" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
-&quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly before comprehending basic rules of hygiene.
+Do you [[slide right to answer]] or [[ignore it]]?</tw-passagedata><tw-passagedata pid="2" name="ignore it" tags="" position="552,286" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
+
+
+Most of the girls are honest (with you at least), but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
+
+
+Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="3" name="slide right to answer" tags="" position="375,259" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
+
+
+&quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly, not comprehending the basic rules dressing room etiquette.
+
+
 &quot;Sorry,&quot; you say to Jade. &quot;What&#39;s up?&quot;
-&quot;Someone just rang me on the intercom telling me they&#39;re here to install chickenwire fencing,&quot; she says. &quot;I&#39;m scared and I don&#39;t know what to do.&quot;
-&quot;Well, who is it?&quot;
-&quot;They didn&#39;t say.&quot;
-&quot;Can you call the police?&quot;
+
+
+&quot;Someone just rang me on the intercom telling me they&#39;re here to install chickenwire fencing,&quot; she says. &quot;I&#39;m scared.&quot;
+
+
+&quot;Who is it?&quot;
+
+
+&quot;They won&#39;t say.&quot;
+
+
+&quot;Call the police.&quot;
+
+
 &quot;Can&#39;t. I&#39;m holding.&quot;
-Do you assure her that [[it&#39;s probably just X, your erstwhile boyfriend]] or do you [[panic because of what happened the other week]]?</tw-passagedata><tw-passagedata pid="4" name="it&#39;s probably just X, your erstwhile boyfriend" tags="" position="292,431" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="panic because of what happened the other week" tags="" position="557,422" size="100,100">On 26 April you and X and Jade went to Tramp for an event organised by your Brasilian DJ friend. This was the night that everything changed for you. There was some MDMA going around in the water bottles that night, some marijuana in the cigarettes. 
-Do you [[go to the bathroom]] or </tw-passagedata><tw-passagedata pid="6" name="go to the bathroom" tags="" position="669,545" size="100,100">change me
-hello</tw-passagedata><tw-passagedata pid="7" name="answer your phone" tags="" position="354,251" size="100,100">Of course you answer the phone. It&#39;s your best friend Jade. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="8" name="The Injustice System" tags="" position="747.5,244" size="100,100">You battle for your rights, reading the fine print. (click-append: &quot;fine print&quot;) [, demanding explanations] (click-append: &quot;demanding explanations&quot;) [, getting everything in writing] 
+
+
+Do you assure her that [[it&#39;s probably just X, your erstwhile boyfriend]] or do you [[panic because of what happened the other week]]?</tw-passagedata><tw-passagedata pid="4" name="it&#39;s probably just X, your erstwhile boyfriend" tags="" position="292,431" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="panic because of what happened the other week" tags="" position="457,424" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
+
+
+Your edges are blurred, a bit warm and fuzzy, so you shake off X&#39;s possessiveness and continue dancing, trying not to let his paranoia kill the vibe. 
+
+Next minute X is professing his undying love to Jade (who looks nothing like you) and calling her by your pet names. 
+
+&quot;You mean you love Jenny,&quot; Jade says to X.
+
+You&#39;re not jealous because his confusion and disorientation is obvious. X is existing in an alternate reality, where every woman is a reflection of you, and you are reflected in every woman&#39;s actions, lit up by multi-coloured strobing lights. 
+
+You start to fear for your own safety. (click-append: &quot;You start to fear for your own safety&quot;) [ (after all, he threatened to kill you if you ever left him for someone else)] In X&#39;s eyes you are every single woman who is making out with any man or woman on the dance floor. You&#39;re gyrating against hundreds of bodies all at once, texting scores of potential lovers, your flesh multiplied and embodied by every pulsing body in the venue. You are the hyper-sexual adulteress of his nightmares in every reality except the one you inhabit.
+
+
+This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. </tw-passagedata><tw-passagedata pid="6" name="go to the bathroom" tags="" position="589,423" size="100,100">change me
+hello</tw-passagedata><tw-passagedata pid="7" name="The Injustice System" tags="" position="1026,267" size="100,100">You battle for your rights, reading the fine print. (click-append: &quot;fine print&quot;) [, demanding explanations] (click-append: &quot;demanding explanations&quot;) [, getting everything in writing] 
 
 
 (t8n-delay: 4s) + (t8n: &quot;fade-down&quot;) [If you go with the flow] (click-append: &quot;If you go with the flow&quot;) [ you risk being victimised by a system that was written by those with the privilege to write the rules] (click-replace: &quot;write the rules&quot;) [bend the rules and to sway the interpretation of those same rules against you.]
@@ -37,7 +72,7 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 
 * the applicant in Family Court
 * the so-called injured party
-* the victim (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="9" name="campaign of terror" tags="" position="747.5,394" size="100,100">He will drag you through the family court system for an entire year. Through... &lt;!--enter stats here re drug tests, court appearances, cancelled ccs etc and $$--!&gt;
+* the victim (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="8" name="campaign of terror" tags="" position="1042,426" size="100,100">He will drag you through the family court system for an entire year. Through... &lt;!--enter stats here re drug tests, court appearances, cancelled ccs etc and $$--!&gt;
 
 
 You will know all along that his goal is not shared custody. (click-replace: &quot;not shared custody&quot;) [maximising your distress and suffering] 
@@ -56,7 +91,25 @@ Words etched in my neuropathways.
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
-(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]</tw-passagedata></tw-storydata>
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]</tw-passagedata><tw-passagedata pid="9" name="having something stolen" tags="" position="584,150" size="100,100">Karla is owned by a boxer from Sydney, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life. I love her and Carmella immediately when they catch and call out the girl who rips an outfit off my rack and hides it away without payment. 
+
+
+Karla buys Ed Hardy hoodies and dresses from me. (click-replace: &quot;hoodies and dresses&quot;) [shit] The bikies love it.
+
+
+One night Jodi organises birthday party for one of her friends (click-replace: &quot;friends&quot;) [clients] (click-replace: &quot;clients&quot;) [suppliers]. Let&#39;s call him D. For Dickhead.
+
+
+Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him. With Jodi unofficially acting as his pimp, bringing him girls he might like, or whom he might find easy, Karla is simply sport. He won&#39;t let us leave until we each have a drink. He&#39;s spiked them all with G, which Jodi loves and I hate. Karla is freaking out, but quietly. You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. These are the kinds of guys who bolt the doors from the inside and then hide the keys.
+
+
+You might ask, and this is a pertinant question, Why the fuck put yourself in danger like that? It&#39;s partly to please Jodi. (But again: Why the fuck would you want a friend like that?) Also, Sunday nights are a gamble with high stakes. You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone or even how you&#39;ll get home.
+
+
+On this particular Sunday night, (click-append: &quot;night&quot;) [, now technically Monday morning] you decide to play hero to Karla by downing her drink as well as yours. In the end, you and Karla made it out of their unmolested, and it felt like a win at the time. You wonder if Jodi ended up giving D a booby prize in exchange for a pipe later.
+
+
+Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
