--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Your phone rings again. It must be an emergency. You [[slide right to answer]].<
 &quot;Can&#39;t. I&#39;m holding.&quot;
 
 
-Do you assure her that [[it&#39;s probably just X, your erstwhile boyfriend]] or do you [[panic because of what happened the other week]]?</tw-passagedata><tw-passagedata pid="4" name="it&#39;s probably just X, your erstwhile boyfriend" tags="" position="292,431" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="panic because of what happened the other week" tags="" position="457,424" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
+You tell her that it&#39;s probably just X, your erstwhile boyfriend. Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="4" name="panic because of what happened the other week" tags="" position="450,394" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
 
 
 Your edges are blurred, a bit warm and fuzzy, so you shake off X&#39;s possessiveness and continue dancing, trying not to let his paranoia kill the vibe. 
@@ -61,8 +61,28 @@ You&#39;re not jealous because his confusion and disorientation is obvious. X is
 You start to fear for your own safety. (click-append: &quot;You start to fear for your own safety&quot;) [ (after all, he threatened to kill you if you ever left him for someone else)] In X&#39;s eyes you are every single woman who is making out with any man or woman on the dance floor. You&#39;re gyrating against hundreds of bodies all at once, texting scores of potential lovers, your flesh multiplied and embodied by every pulsing body in the venue. You are the hyper-sexual adulteress of his nightmares in every reality except the one you inhabit.
 
 
-This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. </tw-passagedata><tw-passagedata pid="6" name="go to the bathroom" tags="" position="589,423" size="100,100">change me
-hello</tw-passagedata><tw-passagedata pid="7" name="The Injustice System" tags="" position="1026,267" size="100,100">You battle for your rights, reading the fine print. (click-append: &quot;fine print&quot;) [, demanding explanations] (click-append: &quot;demanding explanations&quot;) [, getting everything in writing] 
+This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. </tw-passagedata><tw-passagedata pid="5" name="go to the bathroom" tags="" position="315,412" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. You walk past security into the bathroom and enter the first stall on your right, locking the door. You sit on the toilet and start to pee and then your heart sinks. You can hear a commotion outside and you know it&#39;s about you.
+
+
+A desperate scream from outside the bathroom door. &quot;My fiancé is in there!&quot;
+
+
+A low and commandeering voice. &quot;Mate, you can&#39;t go in the girls&#39; bathroom.&quot;
+
+
+And then, the door to the bathroom stall crashing in on your skull. Your purse falls out of your lap and onto the ground, your underwear still around your ankles.
+
+
+He stammers, &quot;I, uh, thought you went in here with someone.&quot; 
+
+
+Now you&#39;re furious. You sober up instantly and ask Jade to help you escort X and his delusional thinking straight home. 
+
+
+&quot;It was the pot,&quot; he pleads, by way of explanation. But you know it was the ice that triggered his psychosis. 
+
+
+You worry that Jade is bearing the brunt of this psychosis while you&#39;re at work. You better [[call X]]. </tw-passagedata><tw-passagedata pid="6" name="The Injustice System" tags="" position="1026,267" size="100,100">You battle for your rights, reading the fine print. (click-append: &quot;fine print&quot;) [, demanding explanations] (click-append: &quot;demanding explanations&quot;) [, getting everything in writing] 
 
 
 (t8n-delay: 4s) + (t8n: &quot;fade-down&quot;) [If you go with the flow] (click-append: &quot;If you go with the flow&quot;) [ you risk being victimised by a system that was written by those with the privilege to write the rules] (click-replace: &quot;write the rules&quot;) [bend the rules and to sway the interpretation of those same rules against you.]
@@ -72,7 +92,7 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 
 * the applicant in Family Court
 * the so-called injured party
-* the victim (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="8" name="campaign of terror" tags="" position="1042,426" size="100,100">He will drag you through the family court system for an entire year. Through... &lt;!--enter stats here re drug tests, court appearances, cancelled ccs etc and $$--!&gt;
+* the victim (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="7" name="campaign of terror" tags="" position="1042,426" size="100,100">He will drag you through the family court system for an entire year. Through... &lt;!--enter stats here re drug tests, court appearances, cancelled ccs etc and $$--!&gt;
 
 
 You will know all along that his goal is not shared custody. (click-replace: &quot;not shared custody&quot;) [maximising your distress and suffering] 
@@ -91,7 +111,7 @@ Words etched in my neuropathways.
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
-(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]</tw-passagedata><tw-passagedata pid="9" name="having something stolen" tags="" position="584,150" size="100,100">Karla is owned by a boxer from Sydney, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life. I love her and Carmella immediately when they catch and call out the girl who rips an outfit off my rack and hides it away without payment. 
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]</tw-passagedata><tw-passagedata pid="8" name="having something stolen" tags="" position="584,150" size="100,100">Karla is owned by a boxer from Sydney, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life. I love her and Carmella immediately when they catch and call out the girl who rips an outfit off my rack and hides it away without payment. 
 
 
 Karla buys Ed Hardy hoodies and dresses from me. (click-replace: &quot;hoodies and dresses&quot;) [shit] The bikies love it.
@@ -109,7 +129,22 @@ You might ask, and this is a pertinant question, Why the fuck put yourself in da
 On this particular Sunday night, (click-append: &quot;night&quot;) [, now technically Monday morning] you decide to play hero to Karla by downing her drink as well as yours. In the end, you and Karla made it out of their unmolested, and it felt like a win at the time. You wonder if Jodi ended up giving D a booby prize in exchange for a pipe later.
 
 
-Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata></tw-storydata>
+Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata><tw-passagedata pid="9" name="call X" tags="" position="173,416" size="100,100">Just the other week Jade was asking X if he could install chickenwire fencing to prevent her cat from escaping off of her balcony. 
+
+
+Who else would rock up at her house on a Friday night to offer chickenwire installation?
+
+
+You call X so he can explain himself.
+
+
+He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s house.
+
+
+Later that night, when you pack up my suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X shows up at the club, asking for you by name, like a creepy stalker. To protect your privacy, the bouncer said you weren&#39;t there.
+
+
+You confront X about him showing up at your work. Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up on your whereabouts (click-append: &quot;checking up on your whereabouts&quot;) [, although months later he will fess up to both scenarios in therapy]. </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
