--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Do you [[slide right to answer]] or [[ignore it]]?</tw-passagedata><tw-passageda
 Most of the girls are honest (with you at least), but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
 
 
-Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="3" name="slide right to answer" tags="" position="375,259" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
+Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="3" name="slide right to answer" tags="" position="340,264" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
 
 
 &quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly, not comprehending the basic rules dressing room etiquette.
@@ -47,7 +47,7 @@ Your phone rings again. It must be an emergency. You [[slide right to answer]].<
 &quot;Can&#39;t. I&#39;m holding.&quot;
 
 
-You tell her that it&#39;s probably just X, your erstwhile boyfriend. Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="4" name="panic because of what happened the other week" tags="" position="450,394" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
+You tell her that it&#39;s probably just X, your erstwhile boyfriend. Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="4" name="panic because of what happened the other week" tags="" position="443,383" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
 
 
 Your edges are blurred, a bit warm and fuzzy, so you shake off X&#39;s possessiveness and continue dancing, trying not to let his paranoia kill the vibe. 
@@ -61,7 +61,7 @@ You&#39;re not jealous because his confusion and disorientation is obvious. X is
 You start to fear for your own safety. (click-append: &quot;You start to fear for your own safety&quot;) [ (after all, he threatened to kill you if you ever left him for someone else)] In X&#39;s eyes you are every single woman who is making out with any man or woman on the dance floor. You&#39;re gyrating against hundreds of bodies all at once, texting scores of potential lovers, your flesh multiplied and embodied by every pulsing body in the venue. You are the hyper-sexual adulteress of his nightmares in every reality except the one you inhabit.
 
 
-This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. </tw-passagedata><tw-passagedata pid="5" name="go to the bathroom" tags="" position="315,412" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. You walk past security into the bathroom and enter the first stall on your right, locking the door. You sit on the toilet and start to pee and then your heart sinks. You can hear a commotion outside and you know it&#39;s about you.
+This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. </tw-passagedata><tw-passagedata pid="5" name="go to the bathroom" tags="" position="324,382" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. You walk past security into the bathroom and enter the first stall on your right, locking the door. You sit on the toilet and start to pee and then your heart sinks. You can hear a commotion outside and you know it&#39;s about you.
 
 
 A desperate scream from outside the bathroom door. &quot;My fiancé is in there!&quot;
@@ -129,13 +129,13 @@ You might ask, and this is a pertinant question, Why the fuck put yourself in da
 On this particular Sunday night, (click-append: &quot;night&quot;) [, now technically Monday morning] you decide to play hero to Karla by downing her drink as well as yours. In the end, you and Karla made it out of their unmolested, and it felt like a win at the time. You wonder if Jodi ended up giving D a booby prize in exchange for a pipe later.
 
 
-Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata><tw-passagedata pid="9" name="call X" tags="" position="173,416" size="100,100">Just the other week Jade was asking X if he could install chickenwire fencing to prevent her cat from escaping off of her balcony. 
+Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata><tw-passagedata pid="9" name="call X" tags="" position="191,314" size="100,100">Just recently Jade asked X how to install chickenwire fencing to prevent her cat from escaping off of her balcony. 
 
 
 Who else would rock up at her house on a Friday night to offer chickenwire installation?
 
 
-You call X so he can explain himself.
+You call X, demanding that he explain himself.
 
 
 He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s house.
@@ -144,7 +144,43 @@ He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s h
 Later that night, when you pack up my suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X shows up at the club, asking for you by name, like a creepy stalker. To protect your privacy, the bouncer said you weren&#39;t there.
 
 
-You confront X about him showing up at your work. Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up on your whereabouts (click-append: &quot;checking up on your whereabouts&quot;) [, although months later he will fess up to both scenarios in therapy]. </tw-passagedata></tw-storydata>
+You confront X about him showing up at your work. Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up on your whereabouts (click-append: &quot;checking up on your whereabouts&quot;) [, although later he will confess to the chickenwire and the stalking in therapy]. 
+
+
+[[The next day...]]</tw-passagedata><tw-passagedata pid="10" name="The next day..." tags="" position="191,464" size="100,100">X doesn&#39;t want you to sell clothing at the clubs that night. He phones you as you drive away with your bags packed for the night. You&#39;re beginning to feel suffocated; you couldn&#39;t get out of the apartment quick enough.
+
+
+&quot;The car is riding funny,&quot; he says, as you&#39;re halfway down the block. &quot;You might want to come home.&quot;
+
+
+Do you turn around and [[drive home]] or [[keep driving]]?</tw-passagedata><tw-passagedata pid="11" name="drive home" tags="" position="116,614" size="100,100">Home is where he wants you because that&#39;s where he thinks a woman belongs. In the kitchen, cooking. In the bathroom, cleaning. In the bedroom, tarted up in fishnet stockings and crotchless knickers, fucking, sucking. 
+
+
+And yet you&#39;re the one paying most of the rent and most of the bills, because he&#39;s on disability. (click-append: &quot;disability&quot;) [, even though his claimed disability doesn&#39;t prevent him from taking on high-paying cash jobs] (click-replace: &quot;cash&quot;) [untaxed] On second thought, who&#39;s going to pay the rent if you turn the car around? You can always call RACV in between clubs so [[keep driving]]. </tw-passagedata><tw-passagedata pid="12" name="keep driving" tags="" position="267,614" size="100,100">Besides, isn&#39;t it odd that he would have noticed that something was wrong with the car?
+
+
+What is the possibility that he tampered with the car to keep you at home?
+
+
+If you weren&#39;t scared before, maybe you should be now.
+
+
+You pull up to Showgirls Bar 20 with a flat tire.
+
+
+Two minutes later... (click-append: &quot;Two minutes later...&quot;) [ X parks his car behind yours on King Street, a cop car behind him. You hadn&#39;t noticed him following you all the way there.]
+
+
+The cops find... (click-append: &quot;The cops find...&quot;) [ X&#39;s pornography collection and a drug scale in his car. X gets off the hook by telling the cops that he uses the scale to make sure he doesn&#39;t get cheated when he buys drugs, that he&#39;s not a dealer.] (click-append: &quot;he&#39;s not a dealer&quot;) [, even though he&#39;s got a two-page rap sheet for crimes including commercial trafficking]
+
+
+You wish... (click-append: &quot;You wish...&quot;) [ the cops would arrest him. The two of you are engaged to be married and you don&#39;t understand what you ever saw in him before.] (click-replace: &quot; the cops would arrest him. The two of you are engaged to be married and you don&#39;t understand what you ever saw in him before.&quot;) [ you could get away, but every dollar you have is tied up in your lingerie business, and you have nowhere to go. No family here. No plan B. You&#39;re only in the country because of a prospective marriage visa and if you give up now you will be destitute and homeless. You&#39;re out of options.]
+
+
+You must&#39;ve been blinded. (click-append: &quot;blinded&quot;) [by love, by sex pheromones, by drugs]
+
+
+The next day... (click-append: &quot;The next day...&quot;) [ you insist he see his doctor, who doubles his anti-psychotic medication. Hopefully life will stabalise now.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
