--- a/index.html
+++ b/index.html
@@ -180,7 +180,54 @@ You wish... (click-append: &quot;You wish...&quot;) [ the cops would arrest him.
 You must&#39;ve been blinded. (click-append: &quot;blinded&quot;) [by love, by sex pheromones, by drugs]
 
 
-The next day... (click-append: &quot;The next day...&quot;) [ you insist he see his doctor, who doubles his anti-psychotic medication. Hopefully life will stabalise now.</tw-passagedata></tw-storydata>
+The next day... (click-append: &quot;The next day...&quot;) [ you insist he see his doctor, who doubles his anti-psychotic medication.] 
+
+You&#39;re hopeful that life will stabilise now. And it does. [[For two weeks.]]</tw-passagedata><tw-passagedata pid="13" name="For two weeks." tags="" position="265,737" size="100,100">Nearly two weeks after the suspicious flat tire, you notice X driving past your apartment multiple times each day. Although he&#39;s working across town, he pops in unexpectedly, supposedly for a can of Coke. It would almost be funny, how winded he is after clearly racing up four flights of stairs, throwing open the front door without so much as a hello / a text / a knock. 
+
+
+Except that it&#39;s not funny because he&#39;s looking in every room for a stowaway. An imaginary lover. His cuckhold.
+
+
+And there is none to be found because there is no one else and there never was.
+
+
+He leaves without a Coke because there was no Coke in the fridge and it was never really about refreshments anyhow.
+
+
+He&#39;s doubled his antipsychotic meds on his own accord, not under doctor&#39;s supervision. 
+
+
+[[Peacetime is over.]]</tw-passagedata><tw-passagedata pid="14" name="Peacetime is over." tags="" position="265,860" size="100,100">All you want to do is get through each day, one day at a time, each day getting closer to your goals. You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [and their friends] (click-replace: &quot;friends&quot;) [kids] to come over to shop any time of day / night. First, you&#39;ll pay your debts, then you&#39;ll buy yourself options. (click-replace: &quot;options&quot;) [freedom] When girls come over, you make X leave because he scares them. (click-replace: &quot;scares&quot;) [says innappropriate things to]
+
+
+You are all objects to him.
+
+
+You&#39;re working yourself to exhaustion but work is a pleasure compared to spending time with X. You visit his therapist with him often, and each time he admits to wrongdoing and promises to make enduring changes, but the promises are as lasting (click-replace: &quot;lasting&quot;) [ephemeral] as the cigarettes he smokes. 
+
+
+He accuses you of having an affair and of being on drugs. He says that you never even loved him, that you were only ever using him for a visa. (click-append: &quot;using him for a visa.&quot;) [ His logic implies that you had sex with him hundreds of times (click-append: &quot;times&quot;) [, sometimes three or four times a day,] (click-append: &quot;a day,&quot;) [ submitting to all of his perversions] (click-append: &quot;perversions&quot;) [ (urination, anal, choking, bondage)]  to trick him into wanting to marry you.]
+
+
+You made sacrifices. (click-append: &quot;sacrifices.&quot;) [ You even threw away your vibrators because he so envied the pleasure you took from them and the orgasms that he could not give you.]
+
+
+What a fucking idiot. (click-append: &quot;What a fucking idiot.&quot;) [ No woman would debase herself so completely or so painfully or so often if not for love.] (click-append: &quot;for love&quot;) [ or money] (click-append: &quot;or money&quot;) [, of which he had none] (click-append: &quot;he had none&quot;) [. If sex is a bargaining chip then we are all tricksters and harlots]
+
+
+Mirror mirror on the wall. (click-append: &quot;Mirror mirror on the wall.&quot;) [ You later learn that he was the one cheating, flying high as he was on ice.]
+
+
+He once told you... (click-append: &quot;He once told you...&quot;) [ that his ultimate fantasy was to cage you in a room where you would remain 24 hours a day under video surveillance as his sex slave.]
+
+
+It sounded an awful lot like jail. (click-append: &quot;jail&quot;) [, which is something he would know about, having spend 18 months inside]
+
+
+But getting back to the [[chickenwire]]...
+
+
+</tw-passagedata><tw-passagedata pid="15" name="chickenwire" tags="" position="265,1010" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
